// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h1
    data-stylename="title"
  >
    Log in to Hylo
  </h1>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      autoFocus={true}
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <Link
      data-stylename="forgot-password"
      to="/reset-password"
    >
      <span
        data-stylename="forgot-password"
      >
        Forgot password?
      </span>
    </Link>
    <label
      data-stylename="field-label"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-stylename="submit"
    label="Log In"
    onClick={[Function]}
  />
  <p
    data-stylename="connect-label"
  >
    Or:
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`renders correctly with mobile redirect 1`] = `
<div>
  <DownloadAppPortal
    url="some.url"
  />
  <h1
    data-stylename="title"
  >
    Log in to Hylo
  </h1>
  <div
    data-stylename="field"
  >
    <label
      data-stylename="field-label"
      htmlFor="email"
    >
      Your email address
    </label>
    <TextInput
      aria-label="email"
      autoFocus={true}
      inputRef={[Function]}
      label="email"
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-stylename="field"
  >
    <Link
      data-stylename="forgot-password"
      to="/reset-password"
    >
      <span
        data-stylename="forgot-password"
      >
        Forgot password?
      </span>
    </Link>
    <label
      data-stylename="field-label"
      htmlFor="password"
    >
      Password
    </label>
    <TextInput
      aria-label="password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-stylename="submit"
    label="Log In"
    onClick={[Function]}
  />
  <p
    data-stylename="connect-label"
  >
    Or:
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;
